[package]
name = "balzort"
version = "0.2.4"
description = "Balzort — Anchor Auth + VRF + Tournament Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "balzort"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang        = { version = "^0", features = ["init-if-needed"] }
anchor-spl         = { version = "^0", features = ["token", "token_2022"] }
ephemeral-rollups-sdk = { version = "^0", features = ["access-control", "anchor"] }
ephemeral-vrf-sdk     = { version = "^0", features = ["anchor"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }